[gd_scene load_steps=8 format=3 uid="uid://d3avwhqlpip51"]

[ext_resource type="PackedScene" uid="uid://04kba1s4rs0m" path="res://player.tscn" id="1_02m18"]
[ext_resource type="Script" path="res://main.gd" id="1_sqxsp"]
[ext_resource type="PackedScene" uid="uid://dreqg134bav4l" path="res://enemybase.tscn" id="3_81kwa"]
[ext_resource type="PackedScene" uid="uid://b5ru52y1x1wfu" path="res://player_laser.tscn" id="4_2d1p7"]
[ext_resource type="Script" path="res://SpawnTimer.gd" id="5_cqd0c"]
[ext_resource type="PackedScene" uid="uid://c4gnnesq6pjp6" path="res://heat_bar.tscn" id="5_uka6i"]

[sub_resource type="Curve2D" id="Curve2D_vgdel"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 1080, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_sqxsp")
enemy_scene = ExtResource("3_81kwa")

[node name="Player" parent="." instance=ExtResource("1_02m18")]

[node name="PlayerLaser" parent="Player" instance=ExtResource("4_2d1p7")]
rotation = -1.5708
laser_uptime = 0.6
knockback_factor = 200

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
script = ExtResource("5_cqd0c")

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_vgdel")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HeatBar" parent="." instance=ExtResource("5_uka6i")]
position = Vector2(540, 650)

[node name="StartTimer" type="Timer" parent="."]
autostart = true

[connection signal="laser_cool" from="Player/PlayerLaser" to="HeatBar" method="cooldown"]
[connection signal="laser_heat_percent_is" from="Player/PlayerLaser" to="HeatBar" method="set_size"]
[connection signal="laser_overheated" from="Player/PlayerLaser" to="HeatBar" method="overheat"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="SpawnTimer" method="_on_start_timer_timeout"]
